--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,8 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/png" sizes="16x16" href="assets/images/logos/favicon.png">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.10.5/font/bootstrap-icons.min.css" integrity="sha384-9A8BFa6nxaRXl29hY6zOHe2x6bn0o1ChvY8bLeJokBLbA5VwFNwJ4+8/xFfFro41" crossorigin="anonymous">
+
 </head>
 <body>
   <app-root></app-root>
